# sherpa

./: .eslintrc.js  .gitignore  .prettierrc.js  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
app/: .prettierrc  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
app/.svelte-kit/: ambient.d.ts
app/src/: app.d.ts
app/src/components/: LayoutListWrapper.svelte  SummaryWrapper.svelte
app/src/lib/: acceptedOffer.ts  addresses.ts  carrier.ts  channel.ts  forwarder.ts  offer.ts  (+1 more)
migrations/: deploy.ts  engine.ts  fetch.ts
migrations/mocks/: keys.json  names.json  probabilities.json  routes.ts  shipments.ts  shippers.ts
programs/protocol/: Cargo.toml
programs/protocol/src/: errors.rs  events.rs  lib.rs
programs/protocol/src/actions/: buy_shipment.rs  create_shipment.rs  create_transport.rs  initialize.rs  initialize_state.rs  mod.rs  register_carrier.rs  register_forwarder.rs  register_shipper.rs
programs/protocol/src/actions/carrier/: accept_offer.rs  mod.rs  register.rs
programs/protocol/src/actions/channel/: mod.rs  open_channel.rs  send_message.rs
programs/protocol/src/actions/forwarder/: buy_shipment.rs  create_offer.rs  make_offer.rs  mod.rs  register.rs
programs/protocol/src/actions/shipper/: confirm.rs  create_shipment.rs  mod.rs  register.rs
programs/protocol/src/data/: carrier.rs  channel.rs  forwarder.rs  mod.rs  name.rs  offer.rs  shipment.rs  shipper.rs  state.rs  transport.rs
sdk/: sdk.ts
tests/: basic.spec.ts  flow.spec.ts  protocol.ts  sdk.ts  utils.ts
tests/anchor/: basic.ts
(+194 files in other folders)
