[package]
name = "protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[features]
# default = []
# no-entrypoint = []
# no-idl = []
# no-log-ix-name = []
# cpi = ["no-entrypoint"]


[dependencies]
anchor-lang = "0.29.0"
bytemuck = "1.14.3"
